# python-phycam-margin-analysis

./: .pylintrc  README.md  README.rst  requirements-lint.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: pythonpackage.yml
src/: .python_phycam_margin_analysis.py.swp  ma_classes.py  margin_analysis0.9.py  python_phycam_margin_analysis.py
src/phycam/: margin_analysis.py
tests/: ma_classes.py  ma_test0.9.py  test_cli.py
