[metadata]
name = python-phycam-margin-analysis
version = 1.0.0
description = Python phyCAM MARGIN ANALYSIS
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/phytec/python-phycam-margin-analysis
author = Benedikt Feldmann, PHYTEC Messtechnik GmbH
author_email = b.feldmann@phytec.de
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = src
install_requires =
    smbus
